# NFL_game_prediction

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
models/: gradient_boosting.py  logistic_regression.py  random_forest.py  run_all.py  sprint3_validation_model_comparison.csv  utils.py
nfl_win_prediction/: __init__.py  dataset.py  features.py  plots.py
nfl_win_prediction/modeling/: predict.py  train.py
notebooks/: eda.ipynb  figures.ipynb
