[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nfl_win_prediction"
version = "0.0.1"
description = "This project will try to make a machine learning model capable of accuratly predicting what team will win a nfl match"
authors = [
  { name = "Jesse Ankrah" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["nfl_win_prediction"]
include = ["pyproject.toml", "nfl_win_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["nfl_win_prediction"]
force-sort-within-sections = true

